@@ -59,6 +59,7 @@ Version 1.6.31beta04 [July 11, 2017]
     overflow' check that is on by default with -Wall -Wextra.
 
 Version 1.6.31beta05 [July 11, 2017]
+  Added eXIf chunk support.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
