@@ -479,5 +479,8 @@ struct png_struct_def
    png_colorspace   colorspace;
 #endif
 #endif
+
+/* New member added in libpng-1.6.30 */
+   int num_exif;
 };
 #endif /* PNGSTRUCT_H */
